# metacopy

./: .gitignore  LICENSE.md  pyproject.toml
metacopy/: cli.py  command.py  utils.py
tests/: test_metacopy.py
